[gd_scene load_steps=11 format=3 uid="uid://10h8qxtfap0i"]

[ext_resource type="Script" uid="uid://c3nmxcx4saft2" path="res://Scripts/ZEPassword.gd" id="1_ld0he"]
[ext_resource type="FontFile" uid="uid://d1u2twwcxxbjc" path="res://Fonts/pcsenior.ttf" id="2_7y0wk"]
[ext_resource type="FontFile" uid="uid://gxb8jc5bj3cd" path="res://Fonts/PressStart2P.ttf" id="2_g4jjh"]
[ext_resource type="Texture2D" uid="uid://bux0jend2lpdp" path="res://Assets/ui_focus_gradient.png" id="2_rjc3s"]
[ext_resource type="StyleBox" uid="uid://b6pmunfpdsdix" path="res://Assets/UI_Resources/pressed_texture.tres" id="3_g4jjh"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vvqjh"]
texture = ExtResource("2_rjc3s")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_os53d"]
texture = ExtResource("2_rjc3s")
modulate_color = Color(0.423529, 0.831373, 0.878431, 0.498039)

[sub_resource type="Animation" id="Animation_7y0wk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ld0he"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rjc3s"]
_data = {
&"RESET": SubResource("Animation_7y0wk"),
&"fade_in": SubResource("Animation_ld0he")
}

[node name="ZEPassword" type="Control"]
process_mode = 3
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ld0he")

[node name="PasswordWindow" type="ColorRect" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 184.0
offset_top = 10.0
offset_right = 456.0
offset_bottom = 290.0
pivot_offset = Vector2(160, 112)
mouse_filter = 2
color = Color(0.32549, 0, 0, 0.435294)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="WindowBorder" type="Line2D" parent="PasswordWindow"]
position = Vector2(2.11446, 4.3983)
scale = Vector2(1.70482, 2.4661)
points = PackedVector2Array(160, 0, 0, 0, 0, 112, 160, 112)
closed = true
width = 3.0
default_color = Color(0.45098, 0, 0, 1)

[node name="ButtonBox" type="Control" parent="."]
process_mode = 3
anchors_preset = 0
offset_left = 7.0
offset_right = 47.0
offset_bottom = 40.0
focus_mode = 2
mouse_filter = 2
metadata/_edit_group_ = true

[node name="Button1" type="Button" parent="ButtonBox"]
layout_mode = 0
offset_left = 248.0
offset_top = 120.0
offset_right = 284.0
offset_bottom = 156.0
focus_neighbor_left = NodePath("../Button3")
focus_neighbor_top = NodePath("../ButtonClear")
focus_neighbor_right = NodePath("../Button2")
focus_neighbor_bottom = NodePath("../Button4")
focus_next = NodePath("../Button2")
focus_previous = NodePath("../ButtonEnter")
theme_override_colors/font_hover_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.866667, 0, 1)
theme_override_colors/font_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/h_separation = 2
theme_override_constants/align_to_largest_stylebox = 13
theme_override_fonts/font = ExtResource("2_g4jjh")
theme_override_styles/focus = SubResource("StyleBoxTexture_vvqjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_os53d")
theme_override_styles/pressed = ExtResource("3_g4jjh")
text = "1"

[node name="Button2" type="Button" parent="ButtonBox"]
layout_mode = 0
offset_left = 296.0
offset_top = 120.0
offset_right = 332.0
offset_bottom = 156.0
focus_neighbor_left = NodePath("../Button1")
focus_neighbor_top = NodePath("../Button0")
focus_neighbor_right = NodePath("../Button3")
focus_neighbor_bottom = NodePath("../Button5")
focus_next = NodePath("../Button3")
focus_previous = NodePath("../Button1")
theme_override_colors/font_hover_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.866667, 0, 1)
theme_override_colors/font_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/h_separation = 2
theme_override_constants/align_to_largest_stylebox = 13
theme_override_fonts/font = ExtResource("2_g4jjh")
theme_override_styles/focus = SubResource("StyleBoxTexture_vvqjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_os53d")
theme_override_styles/pressed = ExtResource("3_g4jjh")
text = "2"

[node name="Button3" type="Button" parent="ButtonBox"]
layout_mode = 0
offset_left = 344.0
offset_top = 120.0
offset_right = 380.0
offset_bottom = 156.0
focus_neighbor_left = NodePath("../Button2")
focus_neighbor_top = NodePath("../ButtonEnter")
focus_neighbor_right = NodePath("../Button1")
focus_neighbor_bottom = NodePath("../Button6")
focus_next = NodePath("../Button4")
focus_previous = NodePath("../Button2")
theme_override_colors/font_hover_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.866667, 0, 1)
theme_override_colors/font_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/h_separation = 2
theme_override_constants/align_to_largest_stylebox = 13
theme_override_fonts/font = ExtResource("2_g4jjh")
theme_override_styles/focus = SubResource("StyleBoxTexture_vvqjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_os53d")
theme_override_styles/pressed = ExtResource("3_g4jjh")
text = "3"

[node name="Button4" type="Button" parent="ButtonBox"]
layout_mode = 0
offset_left = 248.0
offset_top = 160.0
offset_right = 284.0
offset_bottom = 196.0
focus_neighbor_left = NodePath("../Button6")
focus_neighbor_top = NodePath("../Button1")
focus_neighbor_right = NodePath("../Button5")
focus_neighbor_bottom = NodePath("../Button7")
focus_next = NodePath("../Button5")
focus_previous = NodePath("../Button3")
theme_override_colors/font_hover_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.866667, 0, 1)
theme_override_colors/font_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/h_separation = 2
theme_override_constants/align_to_largest_stylebox = 13
theme_override_fonts/font = ExtResource("2_g4jjh")
theme_override_styles/focus = SubResource("StyleBoxTexture_vvqjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_os53d")
theme_override_styles/pressed = ExtResource("3_g4jjh")
text = "4"

[node name="Button5" type="Button" parent="ButtonBox"]
layout_mode = 0
offset_left = 296.0
offset_top = 160.0
offset_right = 332.0
offset_bottom = 196.0
focus_neighbor_left = NodePath("../Button4")
focus_neighbor_top = NodePath("../Button2")
focus_neighbor_right = NodePath("../Button6")
focus_neighbor_bottom = NodePath("../Button8")
focus_next = NodePath("../Button6")
focus_previous = NodePath("../Button4")
theme_override_colors/font_hover_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.866667, 0, 1)
theme_override_colors/font_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/h_separation = 2
theme_override_constants/align_to_largest_stylebox = 13
theme_override_fonts/font = ExtResource("2_g4jjh")
theme_override_styles/focus = SubResource("StyleBoxTexture_vvqjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_os53d")
theme_override_styles/pressed = ExtResource("3_g4jjh")
text = "5"

[node name="Button6" type="Button" parent="ButtonBox"]
layout_mode = 0
offset_left = 344.0
offset_top = 160.0
offset_right = 380.0
offset_bottom = 196.0
focus_neighbor_left = NodePath("../Button5")
focus_neighbor_top = NodePath("../Button3")
focus_neighbor_right = NodePath("../Button4")
focus_neighbor_bottom = NodePath("../Button9")
focus_next = NodePath("../Button7")
focus_previous = NodePath("../Button5")
theme_override_colors/font_hover_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.866667, 0, 1)
theme_override_colors/font_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/h_separation = 2
theme_override_constants/align_to_largest_stylebox = 13
theme_override_fonts/font = ExtResource("2_g4jjh")
theme_override_styles/focus = SubResource("StyleBoxTexture_vvqjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_os53d")
theme_override_styles/pressed = ExtResource("3_g4jjh")
text = "6"

[node name="Button7" type="Button" parent="ButtonBox"]
layout_mode = 0
offset_left = 248.0
offset_top = 200.0
offset_right = 284.0
offset_bottom = 236.0
focus_neighbor_left = NodePath("../Button9")
focus_neighbor_top = NodePath("../Button4")
focus_neighbor_right = NodePath("../Button8")
focus_neighbor_bottom = NodePath("../ButtonClear")
focus_next = NodePath("../Button8")
focus_previous = NodePath("../Button6")
theme_override_colors/font_hover_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.866667, 0, 1)
theme_override_colors/font_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/h_separation = 2
theme_override_constants/align_to_largest_stylebox = 13
theme_override_fonts/font = ExtResource("2_g4jjh")
theme_override_styles/focus = SubResource("StyleBoxTexture_vvqjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_os53d")
theme_override_styles/pressed = ExtResource("3_g4jjh")
text = "7"

[node name="Button8" type="Button" parent="ButtonBox"]
layout_mode = 0
offset_left = 296.0
offset_top = 200.0
offset_right = 332.0
offset_bottom = 236.0
focus_neighbor_left = NodePath("../Button7")
focus_neighbor_top = NodePath("../Button5")
focus_neighbor_right = NodePath("../Button9")
focus_neighbor_bottom = NodePath("../Button0")
focus_next = NodePath("../Button9")
focus_previous = NodePath("../Button7")
theme_override_colors/font_hover_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.866667, 0, 1)
theme_override_colors/font_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/h_separation = 2
theme_override_constants/align_to_largest_stylebox = 13
theme_override_fonts/font = ExtResource("2_g4jjh")
theme_override_styles/focus = SubResource("StyleBoxTexture_vvqjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_os53d")
theme_override_styles/pressed = ExtResource("3_g4jjh")
text = "8"

[node name="Button9" type="Button" parent="ButtonBox"]
layout_mode = 0
offset_left = 344.0
offset_top = 200.0
offset_right = 380.0
offset_bottom = 236.0
focus_neighbor_left = NodePath("../Button8")
focus_neighbor_top = NodePath("../Button6")
focus_neighbor_right = NodePath("../Button7")
focus_neighbor_bottom = NodePath("../ButtonEnter")
focus_next = NodePath("../ButtonClear")
focus_previous = NodePath("../Button8")
theme_override_colors/font_hover_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.866667, 0, 1)
theme_override_colors/font_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/h_separation = 2
theme_override_constants/align_to_largest_stylebox = 13
theme_override_fonts/font = ExtResource("2_g4jjh")
theme_override_styles/focus = SubResource("StyleBoxTexture_vvqjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_os53d")
theme_override_styles/pressed = ExtResource("3_g4jjh")
text = "9"

[node name="Button0" type="Button" parent="ButtonBox"]
layout_mode = 0
offset_left = 296.0
offset_top = 240.0
offset_right = 332.0
offset_bottom = 276.0
focus_neighbor_left = NodePath("../ButtonClear")
focus_neighbor_top = NodePath("../Button8")
focus_neighbor_right = NodePath("../ButtonEnter")
focus_neighbor_bottom = NodePath("../Button2")
focus_next = NodePath("../ButtonEnter")
focus_previous = NodePath("../ButtonClear")
theme_override_colors/font_hover_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.866667, 0, 1)
theme_override_colors/font_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/h_separation = 2
theme_override_constants/align_to_largest_stylebox = 13
theme_override_fonts/font = ExtResource("2_g4jjh")
theme_override_styles/focus = SubResource("StyleBoxTexture_vvqjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_os53d")
theme_override_styles/pressed = ExtResource("3_g4jjh")
text = "0"

[node name="ButtonClear" type="Button" parent="ButtonBox"]
layout_mode = 0
offset_left = 248.0
offset_top = 240.0
offset_right = 284.0
offset_bottom = 276.0
focus_neighbor_left = NodePath("../ButtonEnter")
focus_neighbor_top = NodePath("../Button7")
focus_neighbor_right = NodePath("../Button0")
focus_neighbor_bottom = NodePath("../Button1")
focus_next = NodePath("../Button0")
focus_previous = NodePath("../Button9")
theme_override_colors/font_hover_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.866667, 0, 1)
theme_override_colors/font_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/h_separation = 2
theme_override_constants/align_to_largest_stylebox = 13
theme_override_fonts/font = ExtResource("2_g4jjh")
theme_override_styles/focus = SubResource("StyleBoxTexture_vvqjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_os53d")
theme_override_styles/pressed = ExtResource("3_g4jjh")
text = "X"

[node name="ButtonEnter" type="Button" parent="ButtonBox"]
layout_mode = 0
offset_left = 344.0
offset_top = 240.0
offset_right = 380.0
offset_bottom = 276.0
focus_neighbor_left = NodePath("../Button0")
focus_neighbor_top = NodePath("../Button9")
focus_neighbor_right = NodePath("../ButtonClear")
focus_neighbor_bottom = NodePath("../Button3")
focus_next = NodePath("../Button1")
focus_previous = NodePath("../Button0")
theme_override_colors/font_hover_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.866667, 0, 1)
theme_override_colors/font_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/h_separation = 2
theme_override_constants/align_to_largest_stylebox = 13
theme_override_fonts/font = ExtResource("2_g4jjh")
theme_override_styles/focus = SubResource("StyleBoxTexture_vvqjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_os53d")
theme_override_styles/pressed = ExtResource("3_g4jjh")
text = "E"

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rjc3s")
}

[node name="Code" type="Label" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 55.0
offset_right = 456.0
offset_bottom = 119.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("2_7y0wk")
theme_override_font_sizes/font_size = 64
text = "----"
horizontal_alignment = 1
metadata/_edit_group_ = true

[node name="TextEffectTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="InputBufferTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="LoadSceneBuffer" type="Timer" parent="."]
one_shot = true

[connection signal="focus_entered" from="ButtonBox/Button1" to="." method="_on_button_1_focus_entered"]
[connection signal="mouse_entered" from="ButtonBox/Button1" to="." method="_on_button_1_mouse_entered"]
[connection signal="pressed" from="ButtonBox/Button1" to="." method="_on_button_1_pressed"]
[connection signal="focus_entered" from="ButtonBox/Button2" to="." method="_on_button_2_focus_entered"]
[connection signal="mouse_entered" from="ButtonBox/Button2" to="." method="_on_button_2_mouse_entered"]
[connection signal="pressed" from="ButtonBox/Button2" to="." method="_on_button_2_pressed"]
[connection signal="focus_entered" from="ButtonBox/Button3" to="." method="_on_button_3_focus_entered"]
[connection signal="mouse_entered" from="ButtonBox/Button3" to="." method="_on_button_3_mouse_entered"]
[connection signal="pressed" from="ButtonBox/Button3" to="." method="_on_button_3_pressed"]
[connection signal="focus_entered" from="ButtonBox/Button4" to="." method="_on_button_4_focus_entered"]
[connection signal="mouse_entered" from="ButtonBox/Button4" to="." method="_on_button_4_mouse_entered"]
[connection signal="pressed" from="ButtonBox/Button4" to="." method="_on_button_4_pressed"]
[connection signal="focus_entered" from="ButtonBox/Button5" to="." method="_on_button_5_focus_entered"]
[connection signal="mouse_entered" from="ButtonBox/Button5" to="." method="_on_button_5_mouse_entered"]
[connection signal="pressed" from="ButtonBox/Button5" to="." method="_on_button_5_pressed"]
[connection signal="focus_entered" from="ButtonBox/Button6" to="." method="_on_button_6_focus_entered"]
[connection signal="mouse_entered" from="ButtonBox/Button6" to="." method="_on_button_6_mouse_entered"]
[connection signal="pressed" from="ButtonBox/Button6" to="." method="_on_button_6_pressed"]
[connection signal="focus_entered" from="ButtonBox/Button7" to="." method="_on_button_7_focus_entered"]
[connection signal="mouse_entered" from="ButtonBox/Button7" to="." method="_on_button_7_mouse_entered"]
[connection signal="pressed" from="ButtonBox/Button7" to="." method="_on_button_7_pressed"]
[connection signal="focus_entered" from="ButtonBox/Button8" to="." method="_on_button_8_focus_entered"]
[connection signal="mouse_entered" from="ButtonBox/Button8" to="." method="_on_button_8_mouse_entered"]
[connection signal="pressed" from="ButtonBox/Button8" to="." method="_on_button_8_pressed"]
[connection signal="focus_entered" from="ButtonBox/Button9" to="." method="_on_button_9_focus_entered"]
[connection signal="mouse_entered" from="ButtonBox/Button9" to="." method="_on_button_9_mouse_entered"]
[connection signal="pressed" from="ButtonBox/Button9" to="." method="_on_button_9_pressed"]
[connection signal="focus_entered" from="ButtonBox/Button0" to="." method="_on_button_0_focus_entered"]
[connection signal="mouse_entered" from="ButtonBox/Button0" to="." method="_on_button_0_mouse_entered"]
[connection signal="pressed" from="ButtonBox/Button0" to="." method="_on_button_0_pressed"]
[connection signal="focus_entered" from="ButtonBox/ButtonClear" to="." method="_on_button_clear_focus_entered"]
[connection signal="mouse_entered" from="ButtonBox/ButtonClear" to="." method="_on_button_clear_mouse_entered"]
[connection signal="pressed" from="ButtonBox/ButtonClear" to="." method="_on_button_clear_pressed"]
[connection signal="focus_entered" from="ButtonBox/ButtonEnter" to="." method="_on_button_enter_focus_entered"]
[connection signal="mouse_entered" from="ButtonBox/ButtonEnter" to="." method="_on_button_enter_mouse_entered"]
[connection signal="pressed" from="ButtonBox/ButtonEnter" to="." method="_on_button_enter_pressed"]
[connection signal="timeout" from="TextEffectTimer" to="." method="_on_effect_timer_timeout"]
[connection signal="timeout" from="InputBufferTimer" to="." method="_on_buffer_timer_timeout"]
[connection signal="timeout" from="LoadSceneBuffer" to="." method="_on_load_scene_buffer_timeout"]
